# nix_exercism_solutions

solutions/cpp/binary-search/1/: binary_search.h
solutions/cpp/binary-search/2/: binary_search.cpp
solutions/cpp/binary-search/3/: binary_search.cpp
solutions/cpp/flower-field/1/: flower_field.cpp  flower_field.h
solutions/cpp/hamming/1/: hamming.cpp  hamming.h
solutions/cpp/hello-world/2/: hello_world.cpp
solutions/cpp/hello-world/3/: hello_world.cpp
solutions/cpp/isbn-verifier/1/: isbn_verifier.cpp  isbn_verifier.h
solutions/cpp/matching-brackets/1/: matching_brackets.cpp  matching_brackets.h
solutions/cpp/secret-handshake/2/: secret_handshake.cpp
solutions/cpp/secret-handshake/3/: secret_handshake.cpp  secret_handshake.h
solutions/cpp/simple-linked-list/1/: simple_linked_list.cpp
solutions/cpp/simple-linked-list/2/: simple_linked_list.cpp  simple_linked_list.h
solutions/cpp/triangle/1/: triangle.cpp  triangle.h
solutions/cpp/triangle/2/: CMakeLists.txt  triangle.cpp  triangle.h
solutions/rust/all-your-base/1/src/: lib.rs
solutions/rust/all-your-base/2/src/: lib.rs
solutions/rust/gigasecond/1/src/: lib.rs
solutions/rust/gigasecond/2/src/: lib.rs
solutions/rust/gigasecond/3/src/: lib.rs
solutions/rust/nth-prime/5/src/: lib.rs
solutions/rust/nth-prime/6/src/: lib.rs
solutions/rust/nth-prime/7/src/: lib.rs
solutions/rust/prime-factors/14/benches/: main_bench.rs
solutions/rust/prime-factors/16/: Cargo.toml
solutions/rust/prime-factors/16/benches/: main_bench.rs
solutions/rust/prime-factors/16/src/: lib.rs
(+3 files in other folders)
