[package]
name = "prime_factors"
version = "0.1.0"
edition = "2024"

# Not all libraries from crates.io are available in Exercism's test runner.
# The full list of available libraries is here:
# https://github.com/exercism/rust-test-runner/blob/main/local-registry/Cargo.toml
[dependencies]

#uncomment next lines for benchmark

#[dev-dependencies]
#criterion = "0.7"

#[[bench]]
#name = "main_bench"
#harness = false
